﻿$Revision$
	$Author$ $Date$
	1. два новых параметра для типов файлов 
	  - горячая клавиша для меню выбора
	  - помещать ли в в группу "Избранные"
	2. новое меню выбора типа файла
	шаг 1: строится меню из настроек, типы добавляются/удаляются из "Избранные". 
	Но изменения не сохраняются. (настройка через диалог настройки схем).

#Revision: 1723
	#Author: ctapmex Date: 2011-06-30 15:55:21 +0600 (Чт, 30 июн 2011)
	1. ошибка чтения настроек при заданном пути до catalog.xml

#Revision: 1719
	#Author: ctapmex Date: 2011-06-29 09:59:44 +0600 (Ср, 29 июн 2011)
	1. Far3 build 2085 API

#Revision: 1714
	#Author: ctapmex Date: 2011-06-28 13:44:11 +0600 (Вт, 28 июн 2011)
	1. ошибка установки цвета фона редактора

#Revision: 1711
	#Author: ctapmex Date: 2011-06-27 17:26:52 +0600 (Пн, 27 июн 2011)
	1. лишняя прорисовка для пустого региона

#Revision: 1709
	#Author: ctapmex Date: 2011-06-24 15:01:07 +0600 (Пт, 24 июн 2011)
	1. падение при входе в окно настроек схем

#Revision: 1707
	#Author: ctapmex Date: 2011-06-22 10:40:11 +0600 (Пт, 22 июн 2011)
	1. Far3 build 2075 API

#Revision: 1705
	#Author: ctapmex Date: 2011-05-21 21:45:35 +0600 (Сб, 21 май 2011)
	1. Far3 build 2043 API

#Revision: 1703
	#Author: ctapmex Date: 2011-03-24 12:26:48 +0500 (Чт, 24 мар 2011)
	1. рефакторинг

#Revision: 1702
	Author: ctapmex Date: 2011-03-23 17:21:20 +0500 (Ср, 23 мар 2011)
	1. обработка возможной ошибки в FarEditorSet::openMenu 
	2. при вставке текста из Outliner устанавливаем курсор на конец вставленного текста

#Revision: 1701
	Author: ctapmex Date: 2011-03-23 15:39:43 +0500 (Ср, 23 мар 2011)
	1. Far3 build 1929 API
	2. функции в SettingsControl переделаны/скопированы по аналогии с Far`овскими

#Revision: 1692
	Author: ctapmex Date: 2011-03-18 17:51:47 +0500 (Пт, 18 мар 2011)
	1. меняем умолчания для отображения креста

#Revision: 1677
	Author: ctapmex Date: 2011-03-13 23:25:26 +0500 (Вс, 13 мар 2011)
	1. Far3 build 1907 API
	2. truemod пока не трогаем - надо переделывать сам far