@@ -35,6 +35,8 @@ const DString DBottom=DString("bottom");
 const DString DTop=DString("top");
 const DString DYes=DString("yes");
 const DString DNo=DString("no");
+const DString DTrue=DString("true");
+const DString DFalse=DString("false");
 const DString DBackparse=DString("backparse");
 const DString DMaxLen=DString("maxlinelength");
 const DString DDefFore=DString("default-fore");
