@@ -1,5 +1,13 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. для параметра FullBack и всех системных параметров схем в списке выбора 
+	значений отображались неверные значения.
+	2. новое меню выбора типа файлов
+	шаг 2: сохранение изменений в группе "Избранное". 
+	добавить Ins, удалить Delete
+
+#Revision: 1725
+	#Author: ctapmex Date: 2011-07-01 15:38:55 +0600 (Пт, 01 июл 2011)
 	1. два новых параметра для типов файлов 
 	  - горячая клавиша для меню выбора
 	  - помещать ли в в группу "Избранные"
